# soundGR

./: AudioBuffer.cpp  AudioBuffer.cpp~  AudioBuffer.h  CMakeLists.txt  PortAudioRecPlay  PortAudioRecPlay.cpp  README.md  Sine.cpp  Sine.h  audio.raw  frequency-domain-filtering.cpp  install.linux  main.cpp  makefile  sampler.cpp  scrolldown.sh  scrollup.sh  wav-test.cpp
FIR-filter-class/: devel.cpp
aquila-examples/: Makefile  cmake_install.cmake
aquila-examples/am_modulation/: Makefile  am_modulation  cmake_install.cmake
aquila-examples/dtw_path_recovery/: Makefile  cmake_install.cmake  dtw_path_recovery
aquila-examples/fft_comparison/: Makefile  cmake_install.cmake  fft_comparison
aquila-examples/fft_filter/: Makefile  cmake_install.cmake  fft_filter
aquila-examples/fft_simple_spectrum/: Makefile  cmake_install.cmake  fft_simple_spectrum
aquila-examples/frame_iteration/: Makefile  cmake_install.cmake  frame_iteration
aquila-examples/generators/: Makefile  cmake_install.cmake  generators
aquila-examples/mfcc_calculation/: Makefile  cmake_install.cmake  mfcc_calculation
aquila-examples/sfml/: Makefile  cmake_install.cmake
aquila-examples/sine_generator/: Makefile  cmake_install.cmake  sine_generator
aquila-examples/spectrogram/: Makefile  cmake_install.cmake  spectrogram
aquila-examples/square_generator/: Makefile  cmake_install.cmake  square_generator
aquila-examples/text_plot/: Makefile  cmake_install.cmake  text_plot
aquila-examples/triangle_generator/: Makefile  cmake_install.cmake  triangle_generator
aquila-examples/wave_info/: Makefile  (+2 more)
(+21 files in other folders)
